# exercises

barcode/: barcode.cabal
barcode/exe/: Main.hs
barcode/src/: Barcode.hs  Parse.hs
find/: package.json  tsconfig.json
find/src/: file.ts  index.ts  utils.ts
find/src/usage/: countDirectories.ts  printResult.ts
fp/: Monad.ts  package.json  tsconfig.json
fp/logger/: logger.ts
fp/src/: Monad.ts
fp/src/example/carrier/: carrier.ts  carries.test.ts
fp/src/example/glob-to-regex/: g2r.test.ts  g2r.ts
fp/src/example/multiply-to/: multiple2.test.ts  multiple2.ts
fp/src/logger/: logger.ts
fp/src/monad/: index.ts  monad.ts
fp/src/monad/list/: list.test.ts  list.ts
fp/src/monad/logger/: logger.test.ts  logger.ts
fp/src/monad/maybe/: maybe.ts
fp/src/monad/state/: state.test.ts  state.ts
fp/src/utils/: index.ts  range.ts  run-while.ts  string-match.test.ts  string-match.ts
go/playbutton/: .gitignore  go.mod  main.go
go/playbutton/button/: button.go  cmd.go
go/playbutton/client/public/: index.html
go/playbutton/cmd/cli/: main.go
go/playbutton/pkg/draw/: draw.go
go/playbutton/pkg/webserver/: generate_image.go
go/playbutton/playbutton/: button.go
go/playbutton/webserver/: generateimage.go  server.go  static.go
haskell/html-parser/: .gitignore  ChangeLog.md  LICENSE  html-parser.cabal  package.yaml  stack.yaml
haskell/html-parser/src/: Main.hs  Parser.hs
haskell/html-parser/test/: Spec.hs
html-parser/: parse.ts
itv/: package.json  tsconfig.json
itv/src/: MyPromise.test.ts  MyPromise.ts  curry.ts  draw.html  sort.ts  tail-call-optimization.test.ts  tail-call-optimization.ts
itv/src/json-parser/: analyze.ts  index.ts  isXX.ts  readme.md  tokenize.ts
js/: package.json
js/src/tree-view/: print-tree.ts
src/html-parser/: parse.test.ts  parse.ts
src/tree-view/: print-tree.test.ts
(+5 files in other folders)
