name:                html-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Shenmin-Z/html-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Shenmin Zhou
maintainer:          shenminzhou@gmail.com
copyright:           Shenmin Zhou
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable html-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       html-parser
                     , base >= 4.7 && < 5

library
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       html-parser
                       , base >=4.7 && <5
  default-language:    Haskell2010
